supplies/supplies-ms/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supplies-ms-service
  labels:
    app: supplies-ms-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 4002
      targetPort: 4002
  selector:
    app: supplies-ms-deployment
