supplies/supplies-ms/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: supplies-ms-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: supplies-ms.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: supplies-ms
                port:
                  number: 4002
